internal/translate/testdata/multiple-paths/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: shop
spec:
  ports:
    - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cdn
  namespace: shop
spec:
  ports:
    - port: 80
